--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>My React App</title>
+  <title>Maerchen</title>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 </head>
 <body>
 <div id="root"></div>
