--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=./index.html">
+  <meta http-equiv="refresh" content="0; url=/Maerchen/index.html">
   <script type="text/javascript">
     (function() {
       var currentPath = window.location.pathname;
 
+      // /Maerchen을 기준으로 경로 재구성
       var newUrl = '/Maerchen' + currentPath.replace('/Maerchen', '');
 
       if (window.location.pathname !== newUrl) {
