--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,8 @@
-<script>
-  // GitHub Pages의 404 처리
-  const redirectTo = location.pathname + location.search;
-  window.location.href = "/Maerchen" + redirectTo;
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>404 Error</title>
+    <meta http-equiv="refresh" content="0; url=/Maerchen/" />
+</head>
+<body></body>
+</html>
