--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta http-equiv="refresh" content="0;url=/" />
     <script>
-        // 요청된 경로와 쿼리 파라미터를 유지하며 index.html로 전달
         const redirectPath = location.pathname + location.search + location.hash;
-        window.location.href = "/" + redirectPath;
+        location.href = "/Maerchen" + redirectPath;
     </script>
 </head>
 <body></body>
