--- a/public/404.html
+++ b/public/404.html
@@ -4,14 +4,28 @@
     <meta http-equiv="refresh" content="0; url=./">
     <meta http-equiv="refresh" content="0; url=./index.html">
     <script type="text/javascript">
-        (function() {
-            var currentPath = window.location.pathname;
-            var newUrl = '/Maerchen' + currentPath.replace('/Maerchen', '');
-            window.history.replaceState(null, null, newUrl);
-            if (window.location.pathname !== newUrl) {
-                window.history.replaceState(null, null, newUrl);
-            }
-        })();
+        var segmentCount = 1;
+
+        var l = window.location;
+        l.replace(
+            l.protocol +
+            "//" +
+            l.hostname +
+            (l.port ? ":" + l.port : "") +
+            l.pathname
+                .split("/")
+                .slice(0, 1 + segmentCount)
+                .join("/") +
+            "/?p=/" +
+            l.pathname
+                .slice(1)
+                .split("/")
+                .slice(segmentCount)
+                .join("/")
+                .replace(/&/g, "~and~") +
+            (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+            l.hash
+        );
     </script>
 </head>
 <body>
